--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,14 +5,23 @@ html{
 
 /*------------------------------ body ------------------------------*/
 body{			
-font-family: helvetica,arial;
 margin: 0px;
 background-color:#99be8f;
 	}
 
-@font-face {
-font-family: myFirstFont;
-src: url(calibri_light.woff);
+@font-face{
+    font-family:"simp";
+    src:url("fonts/simp.ttf");
+	}
+	
+@font-face{
+    font-family:"helB";
+    src:url("fonts/Raleway-SemiBold.ttf");
+	}
+	
+@font-face{
+    font-family:"hel";
+    src:url("fonts/Raleway-Medium.ttf");
 	}
 	
 a{
@@ -32,15 +41,15 @@ li{
 .headers{
 	background-color: #faf2dc;
 	height: 67px;
-	font-family: helvetica;
 	top:0px;
+	box-shadow: 0px 2px 5px 2px #737373;  /*----------1st top, 2nd bottom, 3rd blur, 4th spread radius-----------*/
 	}
 /*----------CONTAINER OF NAVIGATION	-----------*/
 .concon{
 	padding-top:50px;
 	}
 
-.conav {
+.conav{
 	text-align:center;
 	padding-top:3px;
 	}
@@ -50,13 +59,14 @@ li{
 	}	
 	
 .headers a:hover{
-	color: #69ba5e;
+	color: #262d2e;
     text-decoration: underline;
     }
 	
 .headers li{
-	padding-right: 70px;
-    font-size: 15px;
+	font-family:"helB";
+	padding-right: 50px;
+    font-size: 17px;
 	}
 
 .content{
@@ -74,15 +84,18 @@ li{
 	}
 
 .content h1{
+	font-family:"simp";
 	font-size:35px;
 	margin:0px;
+	color:#241818;
 	}
 
 .content p{ 
 	font-size: 17px;
-	color:#1e291d;
+	color:#241818;
 	text-align: justify;
 	width: 614px;
+	font-family:"hel";
 	}
 	
 /*------------------------------ footer ------------------------------*/
@@ -92,29 +105,32 @@ li{
 	min-height:40%;
 	position:relative;
 	text-align:center;
+	box-shadow: 1px 0px 5px 2px #262626;
 	}
 		
 .footernav{
 	vertical-align: top;
     display: inline-block;
     text-align: center;/* To horizontally center images and caption */				
-    width: 100px; /* The width of the container also implies margin around the images. */
-	padding-right:150px;
-	padding-top:70px;
+						/* The width of the container also implies margin around the images. */
+	padding-top:50px;
 	}
 	
 .footernav a{
 	color:#d47a41;
+	font-family: "hel";
 	}
 	
 .cap{
 	display:block;
 	padding-top:5px;
+	font-size: 13px;
 	}
 	
+	
 .footernav img{
-	width: 70x;
-    height: 75px
+	width: 75px;
+    height: 90px;
 	}
 	
 .consub{
@@ -122,22 +138,36 @@ li{
 	}
 	
 .subfooter{
-	padding-top:10px;
 	background-color:#262d2e;
 	bottom:0;
 	width:100%;
-	height:40px;   /* Height of the footer */
+	height:50px;   /* Height of the footer */
 	position:absolute;
+	box-shadow: 2px 0px 1px 2px #262626;
+	text-align:center;
 	}
 	
-.subfooter img{
-	width:30px;
+#sub2 {
+	position:relative;
+	margin:0 auto;
+	}
+	
+#sub2 img{
+	position:absolute;
+	left:0;
+	-webkit-transition: opacity 1s ease-in-out;
+	-moz-transition: opacity 1s ease-in-out;
+	-o-transition: opacity 1s ease-in-out;
+	transition: opacity 1s ease-in-out;
 	height:30px;
-	text-align:center;
-
+	width:30px;
+	padding-left:30px;
 	}
 
-.all{
-	color:gray;
-
+#sub2 img.bot:hover{
+	opacity:0;
 	}
+		
+
+
+
