--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,3 @@
-html{
-	position: relative;
-	min-height: 100%;
-	}
 
 /*------------------------------ body ------------------------------*/
 body{			
@@ -11,7 +7,7 @@ background-color:#99be8f;
 
 @font-face{
     font-family:"simp";
-    src:url("fonts/simp.ttf");
+    src:url("fonts/Arcon-Regular.otf");
 	}
 	
 @font-face{
@@ -36,14 +32,11 @@ li{
 /*------ for the footer to stick at bottom ------*/		
 .container{
 	margin: 0px;
+	background-color:#99be8f;
+	position:relative;
 	}
-/*---------- Navigation  ------------------------*/
-.headers{
-	background-color: #faf2dc;
-	height: 67px;
-	top:0px;
-	box-shadow: 0px 2px 5px 2px #737373;  /*----------1st top, 2nd bottom, 3rd blur, 4th spread radius-----------*/
-	}
+
+
 /*----------CONTAINER OF NAVIGATION	-----------*/
 .concon{
 	padding-top:50px;
@@ -52,6 +45,14 @@ li{
 .conav{
 	text-align:center;
 	padding-top:3px;
+ 
+	}
+/*------------------------------ headers ------------------------------*/	
+.headers{
+	background-color: #faf2dc;
+	height: 67px;
+	top:0px;
+	box-shadow: 0px 2px 5px 2px #737373;  /*----------1st top, 2nd bottom, 3rd blur, 4th spread radius-----------*/
 	}
 	
 .headers a{
@@ -65,22 +66,16 @@ li{
 	
 .headers li{
 	font-family:"helB";
-	padding-right: 50px;
-    font-size: 17px;
+	padding-right: 30px;
+    font-size: 15px;
 	}
-
+/*------------------------------ content ------------------------------*/
 .content{
 	margin: 0px;
 	height: 500px;
 	overflow:auto;
 	padding-left:100px;
 	padding-right:100px;
-	}
-		
-.mypic{
-	float: right;
-	height: 300px;
-	width: 300px;
 	}
 
 .content h1{
@@ -97,77 +92,153 @@ li{
 	width: 614px;
 	font-family:"hel";
 	}
-	
+/*------------------------------ content------------------------------*/	
+.mypic{
+	float: right;
+	height: 300px;
+	width: 300px;
+	}
 /*------------------------------ footer ------------------------------*/
 .footer{
 	
 	background-color: #4e8064;
-	min-height:40%;
 	position:relative;
 	text-align:center;
 	box-shadow: 1px 0px 5px 2px #262626;
+	height:350px;
 	}
 		
 .footernav{
-	vertical-align: top;
-    display: inline-block;
-    text-align: center;/* To horizontally center images and caption */				
+
+    display: inline-block;/* To horizontally center images and caption */	
+    text-align: center;			
 						/* The width of the container also implies margin around the images. */
 	padding-top:50px;
 	}
 	
 .footernav a{
 	color:#d47a41;
-	font-family: "hel";
+	font-family:"helB";
 	}
 	
-.cap{
-	display:block;
-	padding-top:5px;
-	font-size: 13px;
+span.cap{
+	font-size:17px;
 	}
-	
-	
+
 .footernav img{
 	width: 75px;
     height: 90px;
 	}
 	
-.consub{
-	padding-left:400px;
+.footernav p{
+	text-align:center;
+	width: 300px;
+	height: 100px;
+	font-size: 15px;
+	padding-right:23px;
+	}
+	
+.cap{
+	display:block;
+	padding-top:5px;
 	}
 	
 .subfooter{
 	background-color:#262d2e;
-	bottom:0;
 	width:100%;
 	height:50px;   /* Height of the footer */
-	position:absolute;
-	box-shadow: 2px 0px 1px 2px #262626;
-	text-align:center;
-	}
-	
-#sub2 {
 	position:relative;
-	margin:0 auto;
+	box-shadow: 2px 0px 1px 2px #262626;
+	bottom:0;
+	
+	}
+									 /* Icons*/
+									.fb{
+										height: 30px;
+										width: 30px;
+										background-color: #fe7613;
+										border-radius: 50%;
+										display: inline-block;
+										float:left;
+										margin-right:5px; /* spacing */
+										}
+
+									.twi{
+										height: 30px;
+										width: 30px;
+										background-color: #fe7613;
+										border-radius: 50%;
+										display: inline-block;
+										float:left;
+										margin-right:5px; /* spacing */
+										}
+										
+									.ins{
+										height: 30px;
+										width: 30px;
+										background-color: #fe7613;
+										border-radius: 50%;
+										display: inline-block;
+										float:left;
+										margin-right:5px; /* spacing */
+										}	
+						
+									.dri{
+										height: 30px;
+										width: 30px;
+										background-color: #fe7613;
+										border-radius: 50%;
+										display: inline-block;
+										float:left;
+										margin-right:5px; /* spacing */
+										}
+
+									.fb:hover{
+										background-color:#3b5998;
+										}
+									.dri:hover{
+										background-color:#c73b6f;
+										}
+									.twi:hover{
+										background-color:#1DA1F2;
+										}
+									.ins:hover{																																																																																											
+										background-color:#9b6954;
+										}
+										
+
+span.all{
+	float:right;
+	padding-right:10px;
+	bottom:0px;
+	color:gray;
+	}
+ /* To inline and equal the position the icon*/	
+h2{
+    margin:0;
+    display:inline;
+	float:left;
+	padding-right:10px;
+	font-size:20px;
+	padding-left:30px;
+	padding-top:5px;
+	font-size:19px;
+	font-family:"helB";
 	}
 	
-#sub2 img{
-	position:absolute;
-	left:0;
-	-webkit-transition: opacity 1s ease-in-out;
-	-moz-transition: opacity 1s ease-in-out;
-	-o-transition: opacity 1s ease-in-out;
-	transition: opacity 1s ease-in-out;
-	height:30px;
-	width:30px;
-	padding-left:30px;
+ul#follow
+	{
+    display:inline;
+    margin: 0;
+    text-align: right;
 	}
 
-#sub2 img.bot:hover{
-	opacity:0;
+ul#follow li
+	{
+    display: inline;
+    list-style: none;
 	}
-		
-
-
-
+	
+.icon{
+	padding-top:10px;
+	}
